Panels containing sub-panels: opening animation wrong after double click #73587

Closed
opened 2020-02-04 15:13:33 +01:00 by Tobias Langen · 6 comments

System Information
Operating system: Windows-10-10.0.17763-SP0 64 Bits
Graphics card: GeForce GTX 960/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.20

Blender Version
Broken: version: 2.83 (sub 2), branch: master, commit date: 2020-02-04 09:37, hash: 647521af20
Broken since: 2.80
Worked: 2.79 (no sub-panels)

Short description of error
The opening animation of panels containing sub-panels is wrong when the parent panel has been double clicked before.
The sub-panels slide in from the top causing visible artifacts.

Exact steps for others to reproduce the error
Context:

 Closed panel containing subpanels in any given editor.

Action to reproduce:

 Double click the closed (parent) panel fast, so that it opens and closes during the animation. 
 Then, regardless of the waiting time, open the panel again. 

Result:

 The opening animation of sub-panels is wrong.
 They slide in from the top. 
 The resulting animation is not the same as when opening the panel normally.

Blender sub-panel animation bug.mov

**System Information** Operating system: Windows-10-10.0.17763-SP0 64 Bits Graphics card: GeForce GTX 960/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.20 **Blender Version** Broken: version: 2.83 (sub 2), branch: master, commit date: 2020-02-04 09:37, hash: `647521af20` Broken since: 2.80 Worked: 2.79 (no sub-panels) **Short description of error** The opening animation of panels containing sub-panels is wrong when the parent panel has been double clicked before. The sub-panels slide in from the top causing visible artifacts. **Exact steps for others to reproduce the error** Context: ``` Closed panel containing subpanels in any given editor. ``` Action to reproduce: ``` Double click the closed (parent) panel fast, so that it opens and closes during the animation. Then, regardless of the waiting time, open the panel again. ``` Result: ``` The opening animation of sub-panels is wrong. They slide in from the top. The resulting animation is not the same as when opening the panel normally. ``` [Blender sub-panel animation bug.mov](https://archive.blender.org/developer/F8320875/Blender_sub-panel_animation_bug.mov)
Author

Added subscriber: @Tobl

Added subscriber: @Tobl

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm.
It's a glitch that happens fast (within a frame).
Deserves investigation.

I can confirm. It's a glitch that happens fast (within a frame). Deserves investigation.

This issue was referenced by 8e8b4ec3a3

This issue was referenced by 8e8b4ec3a32048fe9a43aeb384367ce797ed07ae
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Julian Eisel self-assigned this 2020-02-28 12:39:53 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73587
No description provided.